# tfg-audit-automation

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: CI_linter.yml  CI_pytest.yml
src/reporterman/: input_validations.py  main.py
src/reporterman/database/: database.py  models.py
src/reporterman/modules/data_analysis/: data_analysis.py
src/reporterman/modules/reconnaissance/: formatters.py  nmap_scanners.py  reconnaissance.py
src/reporterman/test/: database_test.py  input_validations_test.py  module_reconnaissance_test.py
src/reporterman/utils/: install_dependencies.py
